# mpc_controll_AVA

./: README.md
acado_mpc_export/: acado_common.h  acado_integrator.c  acado_qpoases_interface.cpp  acado_solver.c  make_acado_solver_sfunction.m  test
get_master_make_m/: CMakeLists.txt  package.xml
get_master_make_m/include/get_master_make_m/: get_master_make_m_node.h  param_list.h
get_master_make_m/src/: get_master_make_m_node.cpp
mpc_controller/: CMakeLists.txt  olc_cmakelists.txt  package.xml
mpc_controller/include/mpc_controller/: acado_common.h  acado_qpoases_interface.hpp  mpc.h
mpc_controller/lib/: acado_integrator.c  acado_qpoases_interface.cpp  acado_qpoases_interface.hpp  acado_solver.c
mpc_controller/src/: gen_slover.sh  mpc.cpp  mpc_hover.cpp  mpc_old.cpp  temp.cpp
mpc_controller/src/acado_mpc_export/: acado_common.h  acado_integrator.c  acado_qpoases_interface.cpp  acado_solver.c  make_acado_solver_sfunction.m
pose_controller_2/: CMakeLists.txt  MW_custom_RTOS_header.h  main.cpp  package.xml  pose_controller_2.cpp  pose_controller_2.h  pose_controller_2_data.cpp  pose_controller_2_private.h  pose_controller_2_types.h  rosnodeinterface.cpp  rosnodeinterface.h  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtmodel.h  rtwtypes.h  slros_busmsg_conversion.cpp  slros_busmsg_conversion.h  slros_initialize.cpp  slros_initialize.h
pose_controller_2/cfg/: param.cfg
test_mpc/: CMakeLists.txt  package.xml  test_mpc_node
test_mpc/include/test_mpc/: acado_common.h
test_mpc/src/: test_mpc.cpp
